Fix hero on Mobile, again

--- a/src/classes.css
+++ b/src/classes.css
@@ -57,7 +57,7 @@
 }
 
 .hero {
-  height: 100vh;
+  height: 100lvh;
   width: 100vw;
   padding: 0;
   margin: 0;
